--- a/ui/components/checkbox/checkbox.html
+++ b/ui/components/checkbox/checkbox.html
@@ -43,7 +43,7 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Minimal</div>
+    <div>Default</div>
     <div class="example">
       <div class="preview">
         <ui-checkbox></ui-checkbox>
