--- a/ui/components/field/field.html
+++ b/ui/components/field/field.html
@@ -40,7 +40,7 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Mininmal</div>
+    <div>Default</div>
     <div class="example">
       <div class="preview">
         <ui-field>
