--- a/ui/components/input/input.html
+++ b/ui/components/input/input.html
@@ -72,7 +72,7 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Minimal</div>
+    <div>Default</div>
     <div class="example">
       <div class="preview">
         <ui-input></ui-input>
