--- a/ui/components/label/label.html
+++ b/ui/components/label/label.html
@@ -42,7 +42,7 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Label</div>
+    <div>Default</div>
     <div class="example">
       <div class="preview">
         <ui-label>Label</ui-label>
