--- a/ui/components/switch/switch.html
+++ b/ui/components/switch/switch.html
@@ -35,10 +35,10 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Minimal</div>
+    <div>Default</div>
     <div class="example">
       <div class="preview">
-        <ui-switch></ui-switch>
+        <ui-switch id="switch"></ui-switch>
       </div>
       <div class="toolbar">
         <span>HTML</span>
