--- a/ui/components/textarea/textarea.html
+++ b/ui/components/textarea/textarea.html
@@ -44,7 +44,7 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Minimal</div>
+    <div>Default</div>
     <div class="example">
       <div class="preview">
         <ui-textarea></ui-textarea>
