--- a/ui/components/button/button.html
+++ b/ui/components/button/button.html
@@ -57,7 +57,7 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Minimal</div>
+    <div>Default</div>
     <div class="example">
       <div class="preview">
         <ui-button>Button</ui-button>
