--- a/ui/components/icon/icon.css
+++ b/ui/components/icon/icon.css
@@ -1,8 +1,6 @@
 ui-icon{
-  --ui-icon-height:24px;
-  --ui-icon-width:24px;
-  --ui-icon-svg-height:100%;
-  --ui-icon-svg-width:100%;
+  --ui-icon-height:auto;
+  --ui-icon-width:auto;
 
   display:inline-flex;
   align-items:center;
@@ -18,7 +16,5 @@ ui-icon{
     stroke:currentColor;
     pointer-events:none;
     shape-rendering:geometricPrecision;
-    height:var(--ui-icon-svg-height);
-    width:var(--ui-icon-svg-width);
   }
 }
