--- a/ui/components/icon/icon.html
+++ b/ui/components/icon/icon.html
@@ -40,7 +40,7 @@
     <div class="example">
       <div class="preview">
         <ui-icon icon="home"></ui-icon>
-        <ui-button size="slim" theme="transparent" onclick="changeIconName()">REACTIVITY TEST</ui-button>
+        <ui-button size="slim" theme="transparent" onclick="changeIconName()">Reactivity Test</ui-button>
       </div>
       <div class="toolbar">
         <span>HTML</span>
