--- a/ui/components/alert/alert.html
+++ b/ui/components/alert/alert.html
@@ -1,51 +1,25 @@
 <section class="intro">
   <h1>Alert</h1>
-  <div class="description">Displays a message that draws the user's attention.</div>
+  <p>Displays a message that draws the user's attention.</p>
 </section>
 
 <section class="details">
-  <div class="info">
-    <h2>Usage</h2>
-    <ul>
-      <li>
-        Neither element is mandatory; however, either a title or a content is required to display a meaningful message.
-      </li>
-      <li>
-        This component is designed to work with the <a href="#icon">icon</a> component for rendering icons.
-      </li>
-    </ul>
-  </div>
-  <div class="info">
-    <h2>Attributes</h2>
-    <ul>
-      <li>
-        non-closable - static (optional, boolean).<br>
-        Hides the close button when the attribute is present.
-      </li>
-      <li>
-        icon - static (optional).<br>
-        Adds an icon by specifying its name in the attribute, e.g., <code>icon="name"</code>.
-      </li>
-      <li>
-        shape - static (optional). Default: rounded.<br>
-        Available options: rounded, square.<br>
-        Sets the corner style.
-      </li>
-    </ul>
-  </div>
-  <div class="info">
-    <h2>Object properties</h2>
-    <ul>
-      <li>
-        label - optional.<br>
-        Alert label displayed at the top. Plain text only.
-      </li>
-      <li>
-        content - optional.<br>
-        Additional alert content, which can include plain text or HTML markup.
-      </li>
-    </ul>
-  </div>
+  <h2>Info</h2>
+  <p>Neither element is mandatory; however, either a title or a content is required to display a meaningful message.</p>
+  <p>This component is designed to work with the <a href="#icon">icon</a> component for rendering icons.</p>
+</section>
+
+<section class="details">
+  <h2>Object properties</h2>
+  <p>label - optional. Alert label displayed at the top. Plain text only.</p>
+  <p>content - optional. Additional alert content, which can include plain text or HTML markup.</p>
+</section>
+
+<section class="details">
+  <h2>Attributes</h2>
+  <p>non-closable - static (optional, boolean). Hides the close button when the attribute is present.</p>
+  <p>icon - static (optional). Adds an icon by specifying its name in the attribute, e.g., <code>icon="name"</code>.</p>
+  <p>shape - static (optional). Default: rounded. Available options: rounded, square. Sets the corner style.</p>
 </section>
 
 <section class="content">
