--- a/ui/components/field/field.html
+++ b/ui/components/field/field.html
@@ -1,40 +1,19 @@
 <section class="intro">
   <h1>Field</h1>
-  <div class="description">The Field component groups a label with a form control.</div>
+  <p>The Field component groups a label with a form control.</p>
 </section>
 
 <section class="details">
-  <div class="info">
-    <h2>Usage</h2>
-    <ul>
-      <li>Only two components are allowed inside: a ui-label and a form control.</li>
-    </ul>
-  </div>
-  <div class="info">
-    <h2>Features</h2>
-    <ul>
-      <li>
-        Automatic association between the label and the form control by adding a unique UUID to the label's id attribute and assigning this UUID to the form control's aria-labelledby attribute. You can override the unique UUID by adding a custom id attribute to the ui-label component.
-      </li>
-    </ul>
-  </div>
-  <div class="info">
-    <h2>Attributes</h2>
-    <ul>
-      <li>
-        label-position - static (optional). Default: start.<br>
-        Defines the position of the ui-label relative to the form control. By default, the label is placed before the form control, so start doesn't need to be explicitly set. Use end to place the label after the control.
-      </li>
-      <li>
-        vertical - static (optional).<br>
-        Sets the orientation to vertical.
-      </li>
-      <li>
-        required - static (optional).<br>
-        Adds the required attribute to all child elements.
-      </li>
-    </ul>
-  </div>
+  <h2>Info</h2>
+  <p>Only two components are allowed inside: a ui-label and a form control.</p>
+  <p>Automatic association between the label and the form control by adding a unique UUID to the label's id attribute and assigning this UUID to the form control's aria-labelledby attribute. You can override the unique UUID by adding a custom id attribute to the ui-label component.</p>
+</section>
+
+<section class="details">
+  <h2>Attributes</h2>
+  <p>label-position - static (optional). Default: start. Defines the position of the ui-label relative to the form control.</p>
+  <p>vertical - static (optional). Sets the orientation to vertical.</p>
+  <p>required - static (optional). Adds the required attribute to all child elements.</p>
 </section>
 
 <section class="content">
