--- a/ui/components/separator/separator.html
+++ b/ui/components/separator/separator.html
@@ -1,34 +1,17 @@
 <section class="intro">
   <h1>Separator</h1>
-  <div class="description">A component for visually separating content with a line.</div>
+  <p>A component for visually separating content with a line.</p>
 </section>
 
 <section class="details">
-  <div class="info">
-    <h2>Info</h2>
-    <ul>
-      <li>
-        This component will become obsolete once <a href="https://www.w3.org/TR/css-gaps-1/" target="_blank">CSS Gaps Decorations Module Level 1</a> is fully implemented across all major browsers.
-      </li>
-    </ul>
-  </div>
-  <div class="info">
-    <h2>Features</h2>
-    <ul>
-      <li>
-        Separators default to 100% size along their orientation axis.
-      </li>
-    </ul>
-  </div>
-  <div class="info">
-    <h2>Attributes</h2>
-    <ul>
-      <li>
-        vertical - static.<br>
-        Sets the separator orientation to vertical.
-      </li>
-    </ul>
-  </div>
+  <h2>Info</h2>
+  <p>This component will become obsolete once <a href="https://www.w3.org/TR/css-gaps-1/" target="_blank">CSS Gaps Decorations Module Level 1</a> is fully implemented across all major browsers.</p>
+  <p>Separators default to 100% size along their orientation axis.</p>
+</section>
+
+<section class="details">
+  <h2>Attributes</h2>
+  <p>vertical - static. Sets the separator orientation to vertical.</p>
 </section>
 
 <section class="content">
