--- a/ui/components/button/button.html
+++ b/ui/components/button/button.html
@@ -1,57 +1,26 @@
 <section class="intro">
   <h1>Button</h1>
-  <div class="description">Buttons are used to perform actions or submit forms.</div>
+  <p>Buttons are used to perform actions or submit forms.</p>
 </section>
 
 <section class="details">
-  <div class="info">
-    <h2>Usage</h2>
-    <ul>
-      <li>
-        The component can contain text, icons, or both - in any order.
-      </li>
-      <li>
-        This component is designed to work with the <a href="#icon">icon</a> component or an SVG element for rendering icons.
-      </li>
-      <li>
-        This component dispatches a custom event "button-action" whenever it is activated via click or keyboard (Enter / Space).
-        External scripts should listen to this event to handle button actions.<br><br>
-        Example:<br>
-        <code>
-        button.addEventListener('button-action',() =>{<br>
-        &nbsp;console.log('Button clicked');<br>
-        });
-        </code>
-      </li>
-    </ul>
-  </div>
-  <div class="info">
-    <h2>Attributes</h2>
-    <ul>
-      <li>
-        aria-label - static (required).<br>
-        Must be set manually for icon buttons.
-      </li>
-      <li>
-        disabled - reactive (optional).<br>
-        Controls the disabled state of the component.
-      </li>
-      <li>
-        loading - reactive (optional).<br>
-        Controls the loading state of the component.
-      </li>
-      <li>
-        icon-only - static (optional).<br>
-        Indicates that the button contains only an icon, without text.<br>
-        The button will be displayed as a square (with symmetrical sides).
-      </li>
-      <li>
-        shape - static (optional). Default: rounded.<br>
-        Available options: rounded, pill, square, circle.<br>
-        Sets the corner style.
-      </li>
-    </ul>
-  </div>
+  <h2>Info</h2>
+  <p>This component is designed to work with the <a href="#icon">icon</a> component for rendering icons, but can also be easily adapted to use a standard SVG.</p>
+  <p>The component can contain text, icons, or both - in any order.</p>
+  <p>This component dispatches a custom event "button-action" whenever it is activated via click or keyboard (Enter / Space).External scripts should listen to this event to handle button actions.</p>
+  <p><code>
+  button.addEventListener('button-action',() =>{<br>
+  &nbsp;console.log('Button clicked');<br>
+  });
+  </code></p>
+</section>
+
+<section class="details">
+  <h2>Attributes</h2>
+  <p>aria-label - static (required). Must be set manually for icon buttons.</p>
+  <p>disabled - reactive (optional). Controls the disabled state of the component.</p>
+  <p>loading - reactive (optional). Controls the loading state of the component.</p>
+  <p>shape - static (optional). Default: rounded. Available options: rounded, pill, square, circle. Sets the corner style.</p>
 </section>
 
 <section class="content">
@@ -62,7 +31,7 @@
       <div class="preview">
         <ui-button>Button</ui-button>
         <ui-button aria-label="Button" icon-only>
-          <ui-icon icon="settings"></ui-icon>
+          <ui-icon name="settings"></ui-icon>
         </ui-button>
       </div>
       <div class="toolbar">
@@ -74,7 +43,7 @@
 &lt;ui-button&gt;Button&lt;/ui-button&gt;
 
 &lt;ui-button aria-label="Button" icon-only&gt;
-  &lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;
+  &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
 &lt;/ui-button&gt;
 </code></pre>
 
@@ -112,13 +81,13 @@
     <div class="example">
       <div class="preview">
         <ui-button aria-label="Button" icon-only>
-          <ui-icon icon="article"></ui-icon>
+          <ui-icon name="article"></ui-icon>
         </ui-button>
         <ui-button aria-label="Button" shape="circle" icon-only>
-          <ui-icon icon="article"></ui-icon>
+          <ui-icon name="article"></ui-icon>
         </ui-button>
         <ui-button aria-label="Button" shape="square" icon-only>
-          <ui-icon icon="article"></ui-icon>
+          <ui-icon name="article"></ui-icon>
         </ui-button>
       </div>
       <div class="toolbar">
@@ -128,15 +97,15 @@
 
 <pre><code>
 &lt;ui-button aria-label="Button" icon-only&gt;
-&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;
+&nbsp;&lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
 &lt;/ui-button&gt;
 
 &lt;ui-button aria-label="Button" shape="circle" icon-only&gt;
-&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;
+&nbsp;&lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
 &lt;/ui-button&gt;
 
 &lt;ui-button aria-label="Button" shape="square" icon-only&gt;
-&nbsp;&lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;
+&nbsp;&lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
 &lt;/ui-button&gt;
 </code></pre>
 
@@ -149,12 +118,12 @@
     <div class="example">
       <div class="preview">
         <ui-button>
-          <ui-icon icon="home"></ui-icon>
+          <ui-icon name="home"></ui-icon>
           Button
         </ui-button>
         <ui-button>
           Button
-          <ui-icon icon="article"></ui-icon>
+          <ui-icon name="article"></ui-icon>
         </ui-button>
       </div>
       <div class="toolbar">
@@ -164,13 +133,13 @@
 
 <pre><code>
 &lt;ui-button&gt;
- &lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;
+ &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
  Button
 &lt;/ui-button&gt;
 
 &lt;ui-button&gt;
  Button
- &lt;ui-icon icon="name"&gt;&lt;/ui-icon&gt;
+ &lt;ui-icon name="name"&gt;&lt;/ui-icon&gt;
 &lt;/ui-button&gt;
 </code></pre>
 
@@ -237,11 +206,11 @@ buttonReset.addEventListener('button-action',() =>{
   const buttonReset = document.getElementById('reset');
 
   buttonBusy.addEventListener('button-action',() =>{
-    buttonBusy.busy = true;
+    buttonBusy.setAttribute('busy','');
   });
 
   buttonReset.addEventListener('button-action',() => {
-    buttonBusy.busy = false;
+    buttonBusy.removeAttribute('busy');
   });
 
 })();
