--- a/ui/components/focus/focus.html
+++ b/ui/components/focus/focus.html
@@ -1,25 +1,12 @@
 <section class="intro">
   <h1>Focus</h1>
-  <div class="description">A root-level DOM node used to capture focus.</div>
+  <p>A root-level DOM node used to capture focus.</p>
 </section>
 
 <section class="details">
-  <div class="info">
-    <h2>Usage</h2>
-    <ul>
-      <li>
-        Place right after the opening &lt;body&gt; tag.
-      </li>
-    </ul>
-  </div>
-  <div class="info">
-    <h2>Features</h2>
-    <ul>
-      <li>
-        Remains invisible and non-interactive to prevent unexpected focus jumps.
-      </li>
-    </ul>
-  </div>
+  <h2>Info</h2>
+  <p>Place right after the opening &lt;body&gt; tag.</p>
+  <p>Remains invisible and non-interactive to prevent unexpected focus jumps.</p>
 </section>
 
 <section class="content">
