--- a/ui/components/label/label.html
+++ b/ui/components/label/label.html
@@ -1,42 +1,19 @@
 <section class="intro">
   <h1>Label</h1>
-  <div class="description">A label provides accessible, descriptive text for a user interface control.</div>
+  <p>A label provides accessible, descriptive text for a user interface control.</p>
 </section>
 
 <section class="details">
-  <div class="info">
-    <h2>Usage</h2>
-    <ul>
-      <li>
-        The component is used in conjunction with a form control and a <a href="#field">field</a>.
-      </li>
-    </ul>
-  </div>
-  <div class="info">
-    <h2>Features</h2>
-    <ul>
-      <li>
-        By default, the cursor is set to pointer.
-      </li>
-    </ul>
-  </div>
-  <div class="info">
-    <h2>Attributes</h2>
-    <ul>
-      <li>
-        passive - static (optional).<br>
-        Sets the cursor to default, giving the impression that the element is not interactive.
-      </li>
-      <li>
-        required - static (optional).<br>
-        Indicates whether the associated form control is required.
-      </li>
-      <li>
-        indicator - static (optional). Default: *.<br>
-        Overrides the default required indicator. The indicator is added only if the 'required' attribute is present. It can be either a single character or a string.
-      </li>
-    </ul>
-  </div>
+  <h2>Info</h2>
+  <p>The component is used in conjunction with a form control and a <a href="#field">field</a>.</p>
+  <p>By default, the cursor is set to pointer.</p>
+</section>
+
+<section class="details">
+  <h2>Attributes</h2>
+  <p>passive — static (optional). Sets the cursor to default, giving the impression that the element is not interactive.</p>
+  <p>required — static (optional). Indicates whether the associated form control is required.</p>
+  <p>indicator — static (optional). Default: *. Overrides the default required indicator. The indicator is added only if the 'required' attribute is present. It can be either a single character or a string.</p>
 </section>
 
 <section class="content">
