--- a/ui/components/spinner/spinner.html
+++ b/ui/components/spinner/spinner.html
@@ -1,17 +1,11 @@
 <section class="intro">
   <h1>Spinner</h1>
-  <div class="description">A visual indicator of loading or processing.</div>
+  <p>A visual indicator of loading or processing.</p>
 </section>
 
 <section class="details">
-  <div class="info">
-    <h2>Features</h2>
-    <ul>
-      <li>
-        The spinner is already animated.
-      </li>
-    </ul>
-  </div>
+  <h2>Features</h2>
+  <p>The spinner is already animated.</p>
 </section>
 
 <section class="content">
