--- a/ui/components/textarea/textarea.html
+++ b/ui/components/textarea/textarea.html
@@ -4,7 +4,7 @@
 </section>
 
 <section class="details">
-  <h2>Usage</h2>
+  <h2>Info</h2>
   <p>Static init-only attributes are removed from the custom element itself immediately after initialization. To update these values dynamically, use the corresponding properties on the component instance.</p>
 </section>
 
