--- a/ui/components/spinner/spinner.html
+++ b/ui/components/spinner/spinner.html
@@ -4,7 +4,7 @@
 </section>
 
 <section class="details">
-  <h2>Features</h2>
+  <h2>Info</h2>
   <p>The spinner is already animated.</p>
 </section>
 
