--- a/pages/components/icon.html
+++ b/pages/components/icon.html
@@ -18,7 +18,7 @@
     <div>Icon</div>
     <div class="example">
       <div class="preview">
-        <ui-icon name="home" id="t"></ui-icon>
+        <ui-icon name="home" id="example-icon"></ui-icon>
         <ui-button onclick="changeIconName()">Reactivity Test</ui-button>
       </div>
       <div class="toolbar">
