--- a/theme/theme.css
+++ b/theme/theme.css
@@ -96,6 +96,9 @@ body{
 
 header{
   position:sticky;
+  display:flex;
+  align-items:center;
+  justify-content: end;
   top:0;
   width:100%;
   height:60px;
@@ -109,13 +112,14 @@ main{
   display:flex;
   flex-direction:column;
   width:100%;
+  padding-inline:40px;
 }
 
 article{
   display:flex;
   flex-direction:column;
   row-gap:50px;
-  padding:60px 50px;
+  padding-block:60px;
   flex-grow:1;
 }
 
