--- a/pages/components/spinner.html
+++ b/pages/components/spinner.html
@@ -8,6 +8,11 @@
   <p>The spinner is already animated.</p>
 </section>
 
+<section class="details">
+  <h2>Dependencies</h2>
+  <p>This component depends on the <a href="#icon">icon</a> component, which is required as part of its functionality.</p>
+</section>
+
 <section class="content">
 
   <div class="content-item">
